
                              KijiREST Release Notes

Version 0.5.0
  * REST-32. Supports scanning with partially specified entity ids.
  * REST-49. Adds freshening/scoring parameter to KijiREST.

Version 0.4.0
  * REST-40. Bugfix: Fix the issue where /instances/<instance> threw a
      500 error. This was due to an issue in converting Avro to JSON using
      the generic writer. Specific writers are now used when serializing a
      specific record.

Version 0.3.0
  * REST-21. Implements batch POST.
  * REST-33. Bugfix: instances/<instance>/ throws an error retrieving metadata.
  * REST-23. Expose methods to read and write REST row models.
  * REST-12. Emit JSON that is properly navigable instead of a list of cells.
  * REST-8. Allow for the installation of custom HBase configuration via either
      $BASEDIR/conf or the KIJI_REST_CONF_DIR environment variable.

Version 0.2.0
  * REST-20. Update KijiREST to depend on KijiSchema v1.1.0.
  * REST-10. Ensure that the /rows resource streams properly in all cases.
  * REST-18. Adds KIJI_CLASSPATH to KijiREST classpath.
  * REST-9. Allows users to GET with timerange=all.
  * REST-11. Ignore cells with negative timestamps when POSTing.

Version 0.1.0
  * Initial code commit.