@@ -2,6 +2,7 @@
                               KijiREST Release Notes
 
 Version 0.5.0
+  * REST-54. Supports per-request freshening parameters.
   * REST-32. Supports scanning with partially specified entity ids.
   * REST-49. Adds freshening/scoring parameter to KijiREST.
 
